fix: relax compact dialog description spacing

--- a/src/components/ContentDialog/ContentDialog.css
+++ b/src/components/ContentDialog/ContentDialog.css
@@ -74,7 +74,7 @@
 }
 
 .dialog-description--compact {
-  margin-top: -10px;
+  margin: 2px 0 0;
 }
 
 .dialog-field {
